src/objects/Scheme_To_Color__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <referenceTo>Color__c</referenceTo>
        <relationshipLabel>Scheme To Colors</relationshipLabel>
        <relationshipName>Scheme_To_Colors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Accent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheme__c</fullName>
        <label>Scheme</label>
        <referenceTo>Scheme__c</referenceTo>
        <relationshipLabel>Scheme To Colors</relationshipLabel>
        <relationshipName>Scheme_To_Colors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Scheme To Color</label>
    <nameField>
        <label>Scheme To Color Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheme To Colors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>